# OnlineMusicTools

./: Cargo.toml  README.md  Trunk.toml  index.html
src/: dashboard.rs  main.rs  pitch_plot.rs  routes.rs  tools.rs
src/tools/: amplitude_visualizer.rs  metronome.rs  piano.rs  pitch_plot.rs  scale_generator.rs
style/: index.scss
