[package]
name = "musical-mind"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

gloo = "0.11.0"
gloo-net = "0.6.0"
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
serde = "1.0.218"
serde_json = "1.0.139"
serde_yaml = "0.9.34+deprecated"
wasm-logger = "0.2.0"
log = "0.4.26"
web-sys = { version = "0.3.69", features = ["HtmlSelectElement", "HtmlInputElement", "EventTarget", "Navigator", "Clipboard", "AudioContext", "MediaStream", "MediaStreamAudioSourceNode", "MediaStreamConstraints", "AnalyserNode", "MediaDevices"] }
wasm-bindgen-futures = "0.4.50"

plotters = "0.3"
plotters-canvas = "0.3"